--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,5 @@
 build:
-  docker:
-    web: Dockerfile
+    docker:
+        web: Dockerfile
 run:
-  web: bundle exec puma -C config/puma.rb
+    web: /bin/sh -c gunicorn\ app:app
